--- a/HW06/gan-base.ipynb
+++ b/HW06/gan-base.ipynb
@@ -42,7 +42,8 @@
     "sample_size = 64 # fixed sample size for generator\n",
     "nz = 128 # latent vector size\n",
     "k = 1 # number of steps to apply to the discriminator\n",
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "print(device)"
    ]
   },
   {
@@ -190,17 +191,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "irish-allen",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# loss function\n",
-    "criterion = nn.BCELoss() # Binary Cross Entropy loss"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "suited-fishing",
    "metadata": {},
    "outputs": [],
@@ -278,16 +268,24 @@
    "outputs": [],
    "source": [
     "\n",
-    "import torch.nn.functional as F\n",
     "\n",
     "torch.manual_seed(7777)\n",
     "\n",
+    "probNo =1\n",
+    "# loss function\n",
+    "if probNo == 3:\n",
+    "    criterion = nn.MSELoss()# MSE loss\n",
+    "else:\n",
+    "    criterion = nn.BCELoss() # Binary Cross Entropy loss\n",
+    "\n",
     "def generator_loss(output, true_label):\n",
+    "    \n",
     "    return criterion(output, true_label)\n",
     "\n",
     "def discriminator_loss(output, true_label):\n",
     "    return criterion(output, true_label)\n",
     "    \n",
+    "\n",
     "\n",
     "for epoch in range(epochs):\n",
     "    loss_g = 0.0\n",
@@ -297,7 +295,7 @@
     "        real_images, _ = data\n",
     "        real_images = real_images.to(device)\n",
     "\n",
-    "        # Training the discriminator\n",
+    "        # Training the D\n",
     "        for i in range(k):\n",
     "           real_labels = label_real(real_images.shape[0]).to(device)\n",
     "\n",
@@ -318,26 +316,26 @@
     "\n",
     "           optim_d.step()\n",
     "\n",
-    "           loss_d += real_loss.item() + fake_loss.item()\n",
+    "           loss_d += 0.5*real_loss.item() + 0.5*fake_loss.item()\n",
     "\n",
-    "        # Training the generator \n",
+    "        # Training the G \n",
     "        fake_images = generator(create_noise(sample_size, nz))\n",
     "        real_labels = label_real(fake_images.shape[0])\n",
     "        \n",
     "        #(Q b)\n",
-    "        # fake_labels = label_fake(fake_images.shape[0])\n",
+    "        if probNo == 2:\n",
+    "            fake_labels = label_fake(fake_images.shape[0])\n",
     "\n",
     "        optim_g.zero_grad()\n",
     "\n",
-    "        # Passing fake images through discriminator\n",
+    "        # Passing fake images to the discriminator\n",
     "        output = discriminator(fake_images)\n",
     "\n",
-    "        # Generating the loss for the generator\n",
+    "        # Generating the loss G\n",
     "        gen_loss = generator_loss(output, real_labels)\n",
     "        \n",
-    "        # Qb\n",
-    "        \n",
-    "        # gen_loss =  -generator_loss(output, fake_labels)\n",
+    "        if probNo == 2:\n",
+    "            gen_loss =  -generator_loss(output, fake_labels)\n",
     "\n",
     "        gen_loss.backward()\n",
     "\n",
@@ -362,7 +360,7 @@
     "        plt.show()\n",
     "    \n",
     "    # save the generated torch tensor models to disk\n",
-    "        save_generator_image(generated_img, f\"outputs/gen_img{epoch+1}.png\")\n",
+    "        # save_generator_image(generated_img, f\"outputs/gen_img_{probNo}_{epoch+1}.png\")\n",
     "    \n",
     "    images.append(generated_img)\n",
     "    epoch_loss_g = loss_g / bi # total generator loss for the epoch\n",
@@ -370,8 +368,8 @@
     "    losses_g.append(epoch_loss_g)\n",
     "    losses_d.append(epoch_loss_d)\n",
     "    \n",
-    "    # print(f\"Epoch {epoch+1} of {epochs}\")\n",
-    "    # print(f\"Generator loss: {epoch_loss_g:.8f}, Discriminator loss: {epoch_loss_d:.8f}\")"
+    "    print(f\"Epoch {epoch+1} of {epochs}\")\n",
+    "    print(f\"Generator loss: {epoch_loss_g:.8f}, Discriminator loss: {epoch_loss_d:.8f}\")"
    ]
   },
   {
@@ -382,7 +380,7 @@
    "outputs": [],
    "source": [
     "print('DONE TRAINING')\n",
-    "torch.save(generator.state_dict(), 'outputs/generator.pth')"
+    "torch.save(generator.state_dict(), f\"outputs/generator{probNo}.pth\")"
    ]
   },
   {
@@ -394,7 +392,7 @@
    "source": [
     "# save the generated images as GIF file\n",
     "imgs = [np.array(to_pil_image(img)) for img in images]\n",
-    "imageio.mimsave('outputs/generator_images.gif', imgs)"
+    "imageio.mimsave(f'outputs/generator_images{probNo}.gif', imgs)"
    ]
   },
   {
@@ -409,7 +407,7 @@
     "plt.plot(losses_g, label='Generator loss')\n",
     "plt.plot(losses_d, label='Discriminator Loss')\n",
     "plt.legend()\n",
-    "plt.savefig('outputs/loss.png')"
+    "plt.savefig(f'outputs/loss_{probNo}.png')"
    ]
   },
   {
@@ -437,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
