--- a/HW06/gan-base.ipynb
+++ b/HW06/gan-base.ipynb
@@ -360,7 +360,7 @@
     "        plt.show()\n",
     "    \n",
     "    # save the generated torch tensor models to disk\n",
-    "        # save_generator_image(generated_img, f\"outputs/gen_img_{probNo}_{epoch+1}.png\")\n",
+    "        save_generator_image(generated_img, f\"outputs/gen_img_{probNo}_{epoch+1}.png\")\n",
     "    \n",
     "    images.append(generated_img)\n",
     "    epoch_loss_g = loss_g / bi # total generator loss for the epoch\n",
